# soloiv

./: .gitignore  BUILD_AND_RUN.md  CFRADIAL_PLAN.md  CI_PLAN.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  SESSION_PLAN.md
cmake/: FindRadx.cmake
editor/: CMakeLists.txt  se_bnd.c  sxm_examine.c
include/: CellSpacing.h  CellVector.h  Comment.h  Correction.h  FieldParam.h  FieldRadar.h  LidarDesc.h  LidarParam.h  Parameter.h  Pdata.h  Platform.h  Qdata.h  RadarDesc.h  Ray.h  Sweep.h  Volume.h  Waveform.h  Xtra_stuff.h  dd_defines.h  dd_files.h  dd_general_info.h  point_in_space.h  solo_window_structs.h  super_SWIB.h
perusal/: CMakeLists.txt  color_tables.h  sii_X_stuff.c  sii_callbacks.c  sii_colors_stuff.c  sii_config_stuff.c  sii_edit_widgets.c  sii_exam_widgets.c  sii_externals.h  sii_frame_menu.c  sii_gtk4_compat.c  sii_links_widget.c  sii_log_handler.c  sii_log_handler.h  sii_param_widgets.c  sii_perusal.c  sii_swpfi_widgets.c  sii_utils.c  sii_utils.h  sii_view_widgets.c  solo2.c  soloii.c  soloii.h  soloii_main.c  sp_basics.c  sp_clkd.c  sp_pals.c  xyraster.h
tests/: .asan-suppressions  CMakeLists.txt  test_app_runner.c  test_app_runner.h  test_cfradial_examine.c  test_cfradial_filename.c  test_cfradial_loads.c  test_cfradial_multisweep.c  test_cvd_colormaps.c  test_data_widget_opens.c  test_dorade_partial_header.c  test_dorade_truncated.c  test_edit_applies.c  test_edit_opens.c  test_edit_undo.c  test_examine_opens.c  test_font_cache.c  test_multi_frame_layout.c  test_multisweep_edit_safe.c  test_multisweep_nav.c  test_param_minmax_round_trip.c  test_param_widget_walk.c  test_radx_airborne.c  test_radx_drop_field.c  test_radx_parity.c  test_radx_reload.c  test_radx_roundtrip.c  test_radx_smoke.c  test_seapol_wedge.c  test_smoke.c  test_swpfi_dialog_walk.c  test_walk_main_menu.c  widget_walker.c  widget_walker.h
tests/fixtures/: make_fixtures.sh
tests/fixtures/airborne/cf1/: cfrad.20220907_125318.857_to_20220907_125322.837_N42RF-TM_AIR.nc
tests/fixtures/airborne/cf2/: cfrad2.20220907_125318.857_to_20220907_125322.837_N42RF-TM_AIR.nc
tests/fixtures/ground/cf1/: cfrad.20140703_215739.317_to_20140703_215757.406_KLTX_SUR.nc
tests/fixtures/ground/cf2/: cfrad2.20140703_215739.317_to_20140703_215757.406_KLTX_SUR.nc
tests/fixtures/ground/dorade/: swp.1140703215739.KLTX.317.0.9_SUR_v775
tests/fixtures/ship/cf1/: cfrad.20240903_120008.372_to_20240903_120037.547_SEAPOL_SUR.nc
tests/fixtures/ship/cf2/: cfrad2.20240903_120008.372_to_20240903_120037.547_SEAPOL_PICCOLO_LONG_SUR.nc
tests/fixtures/ship/dorade/: swp.1240903120008.SEAPOL.372.0.5_SUR_v7344
tests/fixtures/volume/: cfrad.20240903_120049.313_to_20240903_120613.852_SEAPOL_SUR.nc
translate/: CMakeLists.txt  dd_files.c  dd_swp_files.c  ddb_common.c  dorade_share.c  gpro_data.c  hrd_dd.c  nex_dd.c  piraq_dd.c  radar_io.c  radar_io.h  radx_shim.cc  sii_view_widgets.c  swp_file_acc.c
